media query livro

--- a/projeto/backend/Bibilioteca/web/assets/css/livro.css
+++ b/projeto/backend/Bibilioteca/web/assets/css/livro.css
@@ -14,3 +14,13 @@
 .titulo:hover {
     white-space: normal;
 }
+
+@media (max-width: 1199px) {
+    .imagem {
+        height: 180px;
+    }
+    
+    .titulo {
+        width: 130px;
+    }
+}
